add get one contest
